# burnie

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
skills/burnie/: SKILL.md
skills/burnie-update/: SKILL.md
src/burnie/: __init__.py  cli.py  parser.py  pricing.py  report.py
tests/: helpers.py  test_parser.py  test_pricing.py  test_report.py
