[project]
name = "burnie"
version = "0.1.2"
description = "Claude Code session cost analytics: your tokens are burning"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Carlos Zoido" },
]
keywords = ["claude-code", "claude", "cost", "tokens", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/czoido/burnie"
Repository = "https://github.com/czoido/burnie"

[project.scripts]
burnie = "burnie.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burnie"]

[tool.hatch.build.targets.wheel.force-include]
"skills/burnie/SKILL.md" = "burnie/skills/burnie/SKILL.md"
